<resources>
    <string name="app_name">FoodRunner</string>
    <string name="password">Password</string>
    <string name="enter_your_mobile_no">Enter your Mobile No.</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an Account? Sign Up now</string>
    <string name="name_min_3_characters"> Name(Min.3 characters)</string>
    <string name="email_address"> Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_character">Password(Min.4 character)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="preference_file_name">Food Runner Preferences</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_registered_mobile_number_and_email_address">Enter your registered Mobile Number and Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="Rs">\u20B9</string>
    <string name="remove">Remove</string>
    <string name="order_placed">ORDER PLACED</string>
    <string name="search">Search</string>
    <string name="cost_low_to_high">Cost Low to High</string>
    <string name="cost_high_to_low">Cost High to Low</string>
    <string name="ratings">Ratings</string>
    <string name="label">Bon Appetit</string>
    <string name="a8_you_can_pay_for_your_order_using_your_debit_credit_card_paytm_account_gpay_cash_on_delivery_service_also_available">A8. You can pay for your order using your debit/credit card,paytm account,Gpay.Cash on Delivery service also available.</string>
    <string name="q8_what_if_i_don_t_receive_the_order_in_time">Q8. What if i don\'t receive the order in time ?</string>
    <string name="a7_contact_trainings_internshala_com">A7. Contact trainings@internshala.com</string>
    <string name="q7_how_to_set_my_shop_in_your_restaurant">Q7. How to set my shop in your restaurant</string>
    <string name="a6_you_ll_receive_a_message_about_every_update_of_your_order">A6. You\'ll receive a message about every update of your order.</string>
    <string name="q6_how_do_i_know_that_my_order_is_confirmed">Q6. How do I know that my order is confirmed ?</string>
    <string name="a5_click_on_the_forgot_password_option_on_the_login_page_you_be_would_further_transferred_to_page_enter_you_email_account_and_number_you_ll_recieve_an_otp_under_5_min_the_otp_will_be_valid_for_24_hours_enter_the_otp_and_change_your_password">A5. Click on the forgot password option on the login page,you be would further transferred to page enter you email account and number.You\'ll recieve an otp under 5 min. The OTP will be valid for 24 hours. Enter the OTP and change your password.</string>
    <string name="q5_how_can_i_reset_my_password">Q5. How can I reset my password ?</string>
    <string name="a4_contact_trainigs_internshala_com">A4. Contact trainigs@internshala.com.</string>
    <string name="q4_how_do_i_know_my_order_is_confirmed">Q4. How do I know my order is confirmed ?</string>
    <string name="a3_yes">A3. Yes.</string>
    <string name="q3_do_you_accept_sodexo_vouchers_or_meal_cards">Q3. Do you accept Sodexo Vouchers or meal cards ?</string>
    <string name="a2_the_refund_would_be_processed_under_24_hours">A2. The refund would be processed under 24 hours.</string>
    <string name="q2_what_is_the_average_refund_process_time">Q2. What is the average refund process time ?</string>
    <string name="a1_you_can_pay_for_your_order_using_your_debit_credit_card_paytm_account_gpay_cash_on_delivery_service_also_available">A1. You can pay for your order using your debit/credit card,paytm account,Gpay.Cash on Delivery service also available.</string>
    <string name="q1_what_are_the_payment_optons_available_to_me">Q1. What are the payment optons available to me ?</string>
</resources>