<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FaqsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q1_what_are_the_payment_optons_available_to_me"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a1_you_can_pay_for_your_order_using_your_debit_credit_card_paytm_account_gpay_cash_on_delivery_service_also_available"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q2_what_is_the_average_refund_process_time"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a2_the_refund_would_be_processed_under_24_hours"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q3_do_you_accept_sodexo_vouchers_or_meal_cards"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a3_yes"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q4_how_do_i_know_my_order_is_confirmed"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a4_contact_trainigs_internshala_com"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q5_how_can_i_reset_my_password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a5_click_on_the_forgot_password_option_on_the_login_page_you_be_would_further_transferred_to_page_enter_you_email_account_and_number_you_ll_recieve_an_otp_under_5_min_the_otp_will_be_valid_for_24_hours_enter_the_otp_and_change_your_password"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q6_how_do_i_know_that_my_order_is_confirmed"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a6_you_ll_receive_a_message_about_every_update_of_your_order"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q7_how_to_set_my_shop_in_your_restaurant"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/a7_contact_trainings_internshala_com"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/q8_what_if_i_don_t_receive_the_order_in_time"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/a8_you_can_pay_for_your_order_using_your_debit_credit_card_paytm_account_gpay_cash_on_delivery_service_also_available"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>
