<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/name_min_3_characters"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_location"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password_min_4_character"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_margin="20dp"
        android:background="#BCF41505"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>